Tests/Resources/Bad/ERROR_OCCURS_CHECK_INFINITE_TYPE/simple_auto_apply_auto_2.st
language core;
extend with #type-reconstruction, #multiparameter-functions;

fn do(f : auto) -> auto {
	return fn(c : auto) {
  	return c(c)
  }
}

fn main(f : auto) -> auto {
    return f(f)
}